# AINative

./: .gitignore  .pre-commit-config.yaml  README.md  create_project_structure.py  pre-commit-config.yaml
.github/: copilot-instructions.md  copilot-settings.json
.github/workflows/: ci.yaml
backend/: build-docs.ps1  diagnostic.py  import_test.py  pyproject.toml  run_debug_pytest.py  run_single_test.py
backend/app/: main.py
backend/app/api/endpoints/: logging.py
backend/app/config/: opentelemetry_config.py
backend/app/core/: __init__.py  opentelemetry_config.py
backend/config/opentelemetry/: otel-collector-config.yaml
backend/monitoring/: __init__.py  grafana.py
backend/src/ainative/: __init__.py
backend/src/ainative/app/: __init__.py  exceptions.py
backend/src/ainative/app/core/: logging_config.py
backend/src/ainative/app/infrastructure/: main.py
backend/src/ainative/app/infrastructure/api/: route_handler.py
backend/src/ainative/app/middleware/: __init__.py  observability.py
backend/src/ainative/prompts/research/: system_prompt.md
backend/src/ainative/prompts/strategist/: user_examples.md
backend/tests/: fixed_opentelemetry.py  test_otel_mocked.py  test_otel_simple.py  test_simple.py
backend/tests/infrastructure/: __init__.py  bak_opentelemetry-test.py  fixed_test_opentelemetry.py  test_logging_setup.py  test_observability_middleware.py  test_opentelemetry.py
backend/tests/monitoring/: conftest.py  test_grafana.py
backend/tests/unit/app/infrastructure/api/: test_route_handler.py
docs/: artifacts_definition.md  compass_definitiions.md  compass_diagram.md  custom_agents_definition.md  projects_definition.md
docs/backend/: build-docs.md
docs/backend/source/: app.rst  conf.py  index.rst  modules.rst  strategist.rst
docs/edge-ai-agent-docs/: README.md  architecture.md  project_overview.md
docs/edge-ai-agent-docs/agents/: archivist_agent.md  builder_agent.md  critic_agent.md  planner_agent.md  strategist_agent.md  synthesizer_agent.md  watcher_agent.md
docs/edge-ai-agent-docs/concepts/: model_context_protocol.md  runtime_optimization.md
docs/edge-ai-agent-docs/usage/: daily_routine.md  weekly_routine.md
docs/scratch/: Agent_Context_Protocol.md  Agents_Documentation.md  Artifacts_Documentation.md  Custom_Agents_Documentation.md  Edge AI Agent Setup copy.md  Edge AI Agent Setup.md  Edge set up.md  EdgeAI_Comprehensive_Documentation.md  Edge_AI_Technical_Implementation.md  Model_Context_Protocol.md  Projects_Documentation.md  Quick_Reference_Guide.md  Security_and_Compliance_Guide.md  System_Integration_Guide.md  setup-prompts.md
edge-ai-agent-docs/agents/: archivist_agent.md  builder_agent.md  strategist_agent.md  watcher_agent.md
edge-ai-agent-docs/concepts/: runtime_optimization.md
frontend/: openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  typedoc.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts
frontend/docs/: README-autodoc.md
frontend/src/: App.tsx
frontend/tests/: example.spec.tsx
project_edge_ai/scripts/: create_project_structure.sh  generate_litellm_config.py  scaffold_project.py
scripts/: generate_litellm_config.py  scaffold_project.py
xproject_edge_ai/: README.md
(+7 files in other folders)
